// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`notifyOwnerNow > preserves the complete mixed L1 batch in en 1`] = `
{
  "delivered": [
    {
      "mediaUrls": [
        "/staged/local/photo.png",
        "https://images.test/a.jpg",
        "https://images.test/b.png",
        "https://images.test/d.webp",
        "/staged/local/voice.ogg",
      ],
      "text": "💬 Alice#5fc0djbz replied to your "TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT…": First reply
Met last week

📨 Letter received
From: Alice#5fc0djbz

LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL… (full text in the inbox)

📎 Attachment: photo.png

💬 #g6v3fp7w replied to you: Second reply

📨 Letter received
From: Bob#g6v3fp7w

https://images.test/b.png
https://images.test/d.webp

📎 Attachment unavailable; its content could not be read.
Old friend

📨 Letter received
From: Bob#g6v3fp7w

📎 Attachment: voice.ogg

📨 Letter received
From: #g6v3fp7w

BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB

🎉 Verified. The ranger confirmed x:@alice is you — your avatar, bio and current follower count (30000) are now on your namecard. Share it: https://profile.test/中, or post something and let the world meet you.

Couldn't verify x:@bob — Proof unavailable. Send me the post link — or just say "posted" — and I'll retry right away. There's no cooldown on a rejection.

 Want to see all the replies? Just say so

 Want the full letter? Just say so",
    },
  ],
  "outcome": "channel",
  "pending": 0,
  "rawMedia": [
    "/local/photo.png",
    "https://images.test/a.jpg",
    "https://images.test/b.png",
    "/local/lost.png",
    "https://images.test/d.webp",
    "/local/voice.ogg",
  ],
  "staged": [
    "/local/photo.png",
    "/local/lost.png",
    "/local/voice.ogg",
  ],
}
`;

exports[`notifyOwnerNow > preserves the complete mixed L1 batch in zh-CN 1`] = `
{
  "delivered": [
    {
      "mediaUrls": [
        "/staged/local/photo.png",
        "https://images.test/a.jpg",
        "https://images.test/b.png",
        "https://images.test/d.webp",
        "/staged/local/voice.ogg",
      ],
      "text": "💬 Alice#5fc0djbz 回了你那条「TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT…」：First reply
Met last week

📨 收到信件
来自：Alice#5fc0djbz

LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL…（全文见信箱）

📎 附件：photo.png

💬 #g6v3fp7w 回了你的发言：Second reply

📨 收到信件
来自：Bob#g6v3fp7w

https://images.test/b.png
https://images.test/d.webp

📎 附件暂不可用，未能读取内容。
Old friend

📨 收到信件
来自：Bob#g6v3fp7w

📎 附件：voice.ogg

📨 收到信件
来自：#g6v3fp7w

BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB

🎉 认证通过！游侠已核验 x:@alice 就是你——头像、简介和此刻的关注者人数（30000）一起记进了你的江湖名帖。分享给朋友：https://profile.test/中；或发条首帖，让江湖认识你本人。

游侠这次没核验通过 x:@bob——Proof unavailable。把帖子链接给我（或说声「发好了」），带上证据立刻重试：被拒没有等待期。

　 想看全部回复，跟我说一声

　 想看这封信的全文，跟我说一声",
    },
  ],
  "outcome": "channel",
  "pending": 0,
  "rawMedia": [
    "/local/photo.png",
    "https://images.test/a.jpg",
    "https://images.test/b.png",
    "/local/lost.png",
    "https://images.test/d.webp",
    "/local/voice.ogg",
  ],
  "staged": [
    "/local/photo.png",
    "/local/lost.png",
    "/local/voice.ogg",
  ],
}
`;
